sort.pancake.lessons.sort.pancake.CohenPancake.scala.error
CohenPancake:9: error: type mismatch;
 found   : Int(0)
 required: Boolean
			if (debug>0)
                                  ^CohenPancake:28: error: type mismatch;
 found   : Int(0)
 required: Boolean
				if (debug > 0) 
                                            ^CohenPancake:35: error: type mismatch;
 found   : Int(0)
 required: Boolean
					if (debug > 0) 
                                                    ^CohenPancake:45: error: type mismatch;
 found   : Int(0)
 required: Boolean
						if (debug > 0) 
                                                            ^CohenPancake:50: error: type mismatch;
 found   : Int(0)
 required: Boolean
						if (debug > 0) 
                                                            ^CohenPancake:63: error: type mismatch;
 found   : Int(0)
 required: Boolean
					if (debug > 0) 
                                                    ^CohenPancake:82: error: type mismatch;
 found   : Int(0)
 required: Boolean
							if (debug > 0) 
                                                                    ^